css/base.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap");

:root {
	--primary-color: #333c6a;
	--primary-color-variant: #3b4993;
	--secondary-color: #fcc32f;
	--background-color: #f1f1f1;
}

* {
  box-sizing: border-box;
}

body {
	font-family: "Quicksand", sans-serif;
	background-color: var(--background-color);
	font-weight: 700;
}

button {
	outline: none;
	border: none;
	font-weight: inherit;
}

